@@ -1,6 +1,6 @@
-EXTRA_DIST = sudoku.png footprints.png winner.png
+EXTRA_DIST = sudoku.png footprints.png
 icondir = $(datadir)/pixmaps
 icon_DATA = sudoku.png
 
 pixmapdir = $(datadir)/pixmaps/gnome-sudoku/
-pixmap_DATA = footprints.png winner.png
+pixmap_DATA = footprints.png
