@@ -1,3 +1,13 @@
+2006-10-28  Andreas Røsdal  <andrearo@pvv.ntnu.no>
+
+	* src/lib/gnome_sudoku.py:
+	* src/lib/game_selector.py:
+	* images/footprints.png:
+	* images/winner.png:
+	* images/Makefile.am:
+	* glade/high_scores.glade: Clean up image usage, for instance
+	we can't use and modify the GNOME logo, because it's a trademark.
+
 2006-10-27  Andreas Røsdal  <andrearo@pvv.ntnu.no>
 
 	* src/lib/gsudoku_copy.py: 
